--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+.card{
+	border: 1px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+  padding: 10px;
+  width: 300px;
+}
+.card img{
+	width: 100%;
+  height: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+.card h3 {
+  font-size: 1.5em;
+  margin: 0;
+}
+.card p {
+  margin: 10px 0;
+}
+.card button {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 3px;
+  cursor: pointer;
+}
